exports[`test a disabled toggle that is enabled 1`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="gzLwoW" />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV">
    Off
  </span>
</div>
`;

exports[`test a disabled toggle that is enabled 2`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="ldWdTm"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="diphEL" />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV">
    On
  </span>
</div>
`;

exports[`test a disabled toggle which matches the snapshot 1`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="gzLwoW" />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV">
    Off
  </span>
</div>
`;

exports[`test an enabled toggle that is disabled 1`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="ldWdTm"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="diphEL" />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV">
    On
  </span>
</div>
`;

exports[`test an enabled toggle that is disabled 2`] = `
<div>
  <div
    aria-checked={false}
    aria-label="Option"
    className="kXYdPH"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="gzLwoW" />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV">
    Off
  </span>
</div>
`;

exports[`test an enabled toggle which matches the snapshot 1`] = `
<div>
  <div
    aria-checked={true}
    aria-label="Option"
    className="ldWdTm"
    onClick={[Function]}
    onKeyDown={[Function]}
    role="checkbox"
    tabIndex="0">
    <span
      className="diphEL" />
  </div>
  <span
    aria-hidden="true"
    className="euIAzV">
    On
  </span>
</div>
`;
